# learning-TensorRT-

./: .dockerignore  .gitignore  DESKTOP_BUILD_GUIDE.md  Dockerfile  Launch_Isra_Chatbot.bat  Launch_Isra_Chatbot_Mac.sh  README.md  build_exe.bat  build_mac_app.sh  build_windows.bat  build_windows_exe.bat  build_windows_online_package.sh  docker-compose.yml  isra_chatbot.spec  project_overview.md  recover.patch  test_desktop_mac.sh  test_desktop_windows.bat
.github/workflows/: build_mac_app.yml  build_windows_exe.yml
backend/: .env  Dockerfile  isra_chatbot.spec  main.py  requirements.txt
backend/app/api/: chat.py  images.py  info.py  license.py  manuals.py  sources.py  stream.py
backend/app/core/: config.py  gpu_check.py  license.py  logging.py  ollama_manager.py
backend/app/database/: __init__.py  qdrant_store.py
backend/app/embeddings/: __init__.py  bge_m3.py
backend/config/: config.json
backend/docs/: architecture.md
backend/evaluation/: evaluate.py  metrics.py
backend/scripts/: migrate_faiss_to_qdrant.py
backend/tests/: conftest.py  test_pipeline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/utils/: api.js
installer/: windows_setup.iss  windows_setup_ci.iss
scripts/: bundle_hf_models.bat  bundle_ollama.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tools/: generate_license.py
(+41 files in other folders)
